# aws-lambda-stream

./: .gitignore  LICENSE  README.md  pyproject.toml
aws_lambda_stream/: __init__.py
aws_lambda_stream/connectors/: __init__.py  cloudwatch.py  dynamodb.py  elasticsearch.py  eventbridge.py  lambda_.py  opensearch.py  s3.py  sns.py  sqs.py
aws_lambda_stream/events/: __init__.py  dynamodb.py  kinesis.py  s3.py  sns.py  sqs.py
aws_lambda_stream/filters/: __init__.py  content.py  event_type.py  latch.py  skip.py
aws_lambda_stream/flavors/: cdc.py  collect.py  correlate.py  elasticsearch.py  evaluate.py  expired.py  materialize.py  s3.py  sns.py  task.py  update.py
aws_lambda_stream/pipelines/: __init__.py
aws_lambda_stream/repositories/: __init__.py
aws_lambda_stream/utils/: __init__.py  apigateway.py  aws.py  batch.py  cloudwatch.py  concurrency.py  decorators.py  dynamodb.py  elasticsearch.py  eventbridge.py  faults.py  filters.py  json_encoder.py  lambda_.py  logger.py  operators.py  opt.py  pluralize.py  print.py  retry.py  s3.py  sns.py  split.py  sqs.py  tags.py  time.py  uow.py
templates/aws-lambda-stream-layer/: package-lock.json  pyproject.toml  serverless.yml
templates/aws_lambda_stream_layer/: package.json
templates/control-service/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
templates/control-service/config/: config.yml  environment.yml  functions.yml  iam.yml  resources.yml
templates/control-service/tests/: conftest.py
templates/event-fault-monitor/: .pylintrc  Makefile  package-lock.json  package.json  pyproject.toml  serverless.yml
templates/event-fault-monitor/config/: config.yml  (+4 more)
templates/event-hub/: README.md  package-lock.json  package.json  serverless.yml
templates/event-lake-s3/: package-lock.json  package.json  serverless.yml
templates/rest-bff-service/: .gitignore  .pylintrc  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg
templates/rest-bff-service/.github/workflows/: development.yml  production.yml  staging.yml
templates/rest-bff-service/config/: config.yml  environment.yml  functions.yml  iam.yml  resources.yml
templates/rest-bff-service/src/: config.py
templates/rest-bff-service/src/core/domain/models/: __init__.py  thing.py
templates/rest-bff-service/src/core/domain/requests/: __init__.py  thing.py
templates/rest-bff-service/src/core/domain/resources/: __init__.py  thing.py
templates/rest-bff-service/src/core/repositories/: __init__.py  thing_repository.py
templates/rest-bff-service/src/core/services/: thing_services.py
templates/rest-bff-service/src/entrypoints/listener/: handler.py  rules.py
templates/rest-bff-service/src/entrypoints/rest/: app.py  handler.py
templates/rest-bff-service/src/entrypoints/trigger/: handler.py  rules.py
templates/rest-bff-service/src/exceptions/: __init__.py
templates/rest-bff-service/tests/: conftest.py
templates/rest-bff-service/tests/unit/entrypoints/listener/: test_listener.py
templates/rest-bff-service/tests/unit/entrypoints/trigger/: test_trigger.py
tests/: conftest.py
(+66 files in other folders)
