[tool.poetry]
name = "aws_lambda_stream"
version = "1.0.5"
description = "Create stream processors with AWS Lambda functions"
authors = ["Alejandro Hernández <clandro89@gmail.com>"]
repository="https://github.com/clandro89/aws-lambda-stream"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
reactivex = "^4.0.4"
boto3 = "^1.24.66"
aws-lambda-powertools = "^1.29.1"
pydash = "^5.1.1"
requests-aws4auth = "^1.1.2"

[tool.poetry.dev-dependencies]
pylint= "~=2.7.4"
pytest = "^7.1.2"
expects = "^0.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
