[tool.poetry]
name = "rest-bff-service"
version = "1.0.0"
description = ""
authors = ["Alejandro Hernandez"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^1.10.2"}

[tool.poetry.dev-dependencies]
commitizen= "~=2.17.0"
pylint= "~=2.7.4"
autopep8 = "^1.6.0"
expects = "^0.9.0"
radon = "^5.1.0"
isort = "^5.10.1"
pyformat = "^0.7"
add-trailing-comma = "^2.2.3"
pytest = "^7.1.2"


[tool.poetry.group.dev.dependencies]
aws-lambda-stream = "^1.0.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
