[metadata]
description-file = README.md

[flake8]
format = wemake
show-source = True
statistics = False
doctests = True
enable-extensions = G

# Plugins:
accept-encodings = utf-8
max-complexity = 6
max-line-length = 88
max-arguments = 11
max-try-body-length = 3
radon-max-cc = 10
radon-show-closures = True
radon-no-assert = True

# Self settings:
max-imports = 15
max-methods = 31
max-local-variables = 7

exclude =
  .git
  __pycache__
  node_modules
  .env
  .venv
  .vscode
  .pytest_cache
  .mypy_cache
  env
  __init__.py

ignore =
  A003   # Python builtin class attribute
  C101   # Coding magic comment not found
  D100   # Missing docstring in public module
  D101   # Missing docstring in public class
  D102   # Missing docstring in public method
  D103   # Missing docstring in public function
  D104   # Missing docstring in public package
  D105   # Missing docstring in magic method
  D106   # Missing docstring in public nested class
  D107   # Missing docstring in __init__
  D401   # First line should be in imperative mood
  DAR    # Darglint
  N803   # Argument name should be lowercase
  RST    # RST Docstrings
  W503   # Line break before binary operator
  WPS115 # Upper-case constant in a class
  WPS202 # Too many module members
  WPS323 # Missing empty line between `coding` magic comment and code
  WPS412 # init module with logic
  WPS601 # Shadowed class attribute

per-file-ignores =
  __init__.py: F401, F403, WPS300, WPS347, WPS440
  test_*.py: S101

[isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = true
multi_line_output = 3
line_length = 88
indent = 4

[coverage:run]
omit=
    src/__init__.py
    src/*/handler.py
    src/*/__init__.py
